Move production-code URL constructor conversions to a separate PR
The src/main changes (RealmAdapter, WebServiceEndpoint,
WebappClassLoader, web-core, webservices, nucleus, ...) and the
UrlToUriConversionEquivalenceTest carry non-trivial encoding/IDN/query
semantics and are split out for focused review. This PR now contains
only the mechanical test-code migration.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>