@@ -20,7 +20,6 @@ package org.glassfish.admingui.plugin;
 import jakarta.inject.Inject;
 
 import java.io.IOException;
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Enumeration;
@@ -312,7 +311,7 @@ public class ConsolePluginService {
                     // Found one... add it.
                     url = urls.nextElement();
                     try {
-                        providerURLs.add(URI.create(url.toExternalForm()).toURL());
+                        providerURLs.add(new URL(url, ""));
                     } catch (Exception ex) {
                         // Ignore b/c this should not ever happen, we're not
                         // changing the URL
