@@ -31,7 +31,6 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -217,8 +216,8 @@ public abstract class AppClientInfo {
         throws MalformedURLException, IOException {
         URL url = null;
         try {
-            url = URI.create(uri).toURL();
-        } catch (IllegalArgumentException | java.net.MalformedURLException e) {
+            url = new URL(uri);
+        } catch(java.net.MalformedURLException e) {
             // ignore
             url = null;
         }
@@ -238,7 +237,7 @@ public abstract class AppClientInfo {
 
     private static URL createJarUrl(File jarFile, String entry)
         throws MalformedURLException, IOException {
-        return URI.create("jar:" + jarFile.toURI().toURL() + "!/" + entry).toURL();
+        return new URL("jar:" + jarFile.toURI().toURL() + "!/" + entry);
     }
 
     protected ApplicationClientDescriptor getAppClient(
