@@ -29,7 +29,6 @@ import com.sun.enterprise.deployment.util.DOLUtils;
 import com.sun.enterprise.deployment.xml.WebServicesTagNames;
 
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.util.Iterator;
 import java.util.Map;
@@ -119,9 +118,9 @@ public class ServiceRefNode extends DeploymentDescriptorNode<ServiceReferenceDes
             }
         } else if (WebServicesTagNames.WSDL_OVERRIDE.equals(name)) {
             try {
-                URL url = URI.create(value).toURL();
+                URL url = new URL(value);
                 descriptor.setWsdlOverride(url);
-            } catch (IllegalArgumentException | MalformedURLException mue) {
+            } catch (MalformedURLException mue) {
                 DOLUtils.getDefaultLogger().log(Level.INFO, "Warning : Invalid wsdl override url=" + value, mue);
             }
         } else {
