@@ -56,7 +56,7 @@ public class HttpClient {
 
             System.out.println("invoking webclient servlet at " + url);
 
-            URL u = URI.create(url).toURL();
+            URL u = new URL(url);
 
             URLConnection uc = u.openConnection();
 
@@ -70,7 +70,7 @@ public class HttpClient {
 
             for (int i = 0; i < 6; i++) {
                 System.out.println("Connecting for the " + i + " time....");
-                u = URI.create(url).toURL();
+                u = new URL(url);
                 uc = u.openConnection();
                 for (String cookie : responseCookies) {
                         uc.setRequestProperty("Cookie", cookie);
@@ -103,7 +103,7 @@ public class HttpClient {
                     "/" + appName + "/" + servletName;
             for (int i = 0; i < 3; i++) {
                 System.out.println("Connecting for the " + i + " time....");
-                u = URI.create(url).toURL();
+                u = new URL(url);
                 uc = u.openConnection();
                 for (String cookie : responseCookies) {
                         uc.setRequestProperty("Cookie", cookie);
