@@ -55,7 +55,7 @@ public class HttpClient {
 
             System.out.println("invoking webclient servlet at " + url);
 
-            URL u = URI.create(url).toURL();
+            URL u = new URL(url);
 
             URLConnection uc = u.openConnection();
 
@@ -69,7 +69,7 @@ public class HttpClient {
 
             for (int i = 0; i < 3; i++) {
                 System.out.println("Connecting for the " + i + " time....");
-                u = URI.create(url).toURL();
+                u = new URL(url);
                 uc = u.openConnection();
                 uc.setRequestProperty("Cookie", cookie);
                 uc.connect();
@@ -98,7 +98,7 @@ public class HttpClient {
                     "/" + appName + "/" + servletName;
             for (int i = 0; i < 3; i++) {
                 System.out.println("Connecting for the " + i + " time....");
-                u = URI.create(url).toURL();
+                u = new URL(url);
                 uc = u.openConnection();
                 uc.setRequestProperty("Cookie", stateInfo.getJsessionCookie());
                 uc.connect();
