@@ -23,7 +23,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLConnection;
@@ -321,7 +320,7 @@ public class StandardClassLoader
             if (factory != null) {
                 streamHandler = factory.createURLStreamHandler(protocol);
             }
-            URL url = URL.of(URI.create(repository), streamHandler);
+            URL url = new URL(null, repository, streamHandler);
             super.addURL(url);
         } catch (MalformedURLException e) {
             IllegalArgumentException iae = new IllegalArgumentException
@@ -846,7 +845,7 @@ public class StandardClassLoader
             JarFile jarFile = null;
             try {
                 if (repository.startsWith("jar:")) {
-                    URL url = URL.of(URI.create(repository), streamHandler);
+                    URL url = new URL(null, repository, streamHandler);
                     JarURLConnection conn =
                         (JarURLConnection) url.openConnection();
                     conn.setAllowUserInteraction(false);
@@ -859,7 +858,7 @@ public class StandardClassLoader
                 } else if (repository.startsWith("file:")) {
                     jarFile = new JarFile(repository.substring(5));
                 } else if (repository.endsWith(".jar")) {
-                    URL url = URL.of(URI.create(repository), streamHandler);
+                    URL url = new URL(null, repository, streamHandler);
                     URLConnection conn = url.openConnection();
                     JarInputStream jis =
                         new JarInputStream(conn.getInputStream());
@@ -925,8 +924,8 @@ public class StandardClassLoader
                 } else {
                     streamHandler = null;
                 }
-                url[i] = URL.of(URI.create(input[i]), streamHandler);
-            } catch (IllegalArgumentException | MalformedURLException e) {
+                url[i] = new URL(null, input[i], streamHandler);
+            } catch (MalformedURLException e) {
                 url[i] = null;
             }
         }
