@@ -19,7 +19,6 @@ package org.apache.catalina.startup;
 
 import java.io.File;
 import java.lang.reflect.Method;
-import java.net.URI;
 import java.net.URL;
 import java.util.Locale;
 
@@ -126,7 +125,7 @@ public class SetDocBaseRule extends Rule {
         }
 
         if (docBase.toLowerCase(Locale.ENGLISH).endsWith(".war")) {
-            URL war = URI.create("jar:" + (new File(docBase)).toURI().toURL() + "!/").toURL();
+            URL war = new URL("jar:" + (new File(docBase)).toURL() + "!/");
             String contextPath = child.getPath();
             if (contextPath.equals("")) {
                 contextPath = "ROOT";
@@ -139,7 +138,7 @@ public class SetDocBaseRule extends Rule {
             if (!docDir.exists()) {
                 File warFile = new File(docBase + ".war");
                 if (warFile.exists()) {
-                    URL war = URI.create("jar:" + warFile.toURI().toURL() + "!/").toURL();
+                    URL war = new URL("jar:" + warFile.toURL() + "!/");
                     docBase = ExpandWar.expand(host, war, child.getPath());
                     file = new File(docBase);
                     docBase = file.getCanonicalPath();
