@@ -717,7 +717,7 @@ public class BeanDeploymentArchiveImpl implements BeanDeploymentArchive {
             file = new File(file, beansXMLPath);
             url = file.toURI().toURL();
         } else {
-            url = URI.create("jar:" + file.toURI() + "!/" + beansXMLPath).toURL();
+            url = new URL("jar:" + file.toURI() + "!/" + beansXMLPath);
         }
 
         return url;
